# ankitron

./: .gitignore  mvp.py  pyproject.toml  usstates.py
ankisync/: __init__.py  __main__.py  cli.py  http_client.py  sync.py
ankitron/: __init__.py  __main__.py  cache.py  deck.py  deck_family.py  deck_fetch_pipeline.py  enums.py  export.py  identity.py  logging.py  provenance.py  transform.py
ankitron/ai/: __init__.py  batch.py  cache.py  prompts.py  types.py
ankitron/cli/: __init__.py  main.py  parser.py
ankitron/media/: __init__.py  charts.py  generated.py  maps.py  pipeline.py
ankitron/preview/: __init__.py  app.py  index.html  server.py  watcher.py
ankitron/sources/: __init__.py  ai.py  ai_card_source.py  base.py  csv_source.py  link_strategy.py  text_source.py  wikidata.py  wikipedia.py
ankitron/sources/wikidata/: __init__.py  classes.py  properties.py  query.py  wikidata.py
ankitron/sync/: __init__.py  http_client.py  sync.py
ankitron/validation/: __init__.py  validators.py  verification.py
ankitron/wikidata/: __init__.py  classes.py  properties.py  query.py
cards/school/spanish/2/vocabulary/: lesson1.tsv  lesson2.tsv  lesson3.tsv  lesson4.tsv  vocabulary.py
